# SuanFADesign

./: 01_memorandum.py  0_1bag.cpp  Binary_rec.py  CMakeLists.txt  README.md  suanfa 01huisu.cpp  suanfa01huisu.cpp  test.py
Binary_test/: CMakeLists.txt
Binary_test/include/: myStack.h
Binary_test/src/: main.cpp
Turing-BinarySearch/include/: tm.h
Turing-BinarySearch/source/: main.cpp  tm.cpp
Turing-Knapsack/include/: tm.h
Turing-Knapsack/source/: main.cpp  tm.cpp
Turing/include/: tm.h
Turing/source/: main.cpp  tm.cpp
include/: myStack.tpp
src/: main.cpp
